--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
 
     <body>
         <div class = "mainheading">
-        <h1>main heading</h1>
+        <h1>West London Transport</h1>
+        </div>
+        <div class = "ïmage">
+        <p><img src="west london transport van.png" alt="contactinfo" height="500" width="800"> </p>
         </div>
         <div class = "header2">
-        <h2>sub heading</h2>
+        <h2>about us</h2>
         </div>
-        <h3>small heading</h3>
-        <p>this is text</p>
+        <div class = "contact">
+        <p>We are a fast and reliable delivery company that will deliver all around London strait to your door step.
+            With great customer services and our consumers being our first priority, why would you use anyone else.
+        </p>
+        </div>
+        <h3>Contact us now, why wait?</h3>
+        <p><img src="west london transport contact.png" alt="contactinfo" height="500" width="800"> </p>
+        <div class = "link">
+        <a href="https://www.facebook.com/wltransport/">Follow us on Facebook</a>
+        </div>
     </body>
 
 </html>
